# url-shortener

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  LOGGING_IMPLEMENTATION.md  Makefile  README.md  app.py  asgi.py  bot_user_agents.txt  config.py  contributing.md  dependencies.py  docker-compose.yml  dockerfile  emojies.py  errors.py  jenkinsfile  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  start_worker.py  utils.py  vercel.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  design-changes.md  documentation-update.md  feature_request.md  performance-issue-report.md  question-support-request.md
.github/workflows/: api_test.yaml  format.yaml  github-ci.yaml  minify.yaml  tests.yaml
api/: __init__.py
api/v1/: __init__.py  exports.py  keys.py  management.py  shorten.py  stats.py  urls.py
blueprints/: __init__.py  api.py  auth.py  cache.py  contact.py  dashboard.py  docs.py  limiter.py  limits.py  oauth.py  redirector.py  seo.py  stats.py  url_shortener.py
builders/: __init__.py  base.py  create.py  exports.py  query.py  stats.py  update.py
cache/: __init__.py  base_cache.py  cache_updates.py  cache_url.py  dual_cache.py  protocol.py  redis_client.py  store.py
config/: apps.yaml
data/: bot_user_agents.txt  emojis.json
dependencies/: __init__.py  auth.py  infra.py  services.py  wiring.py
infrastructure/: __init__.py  crypto.py  geoip.py  http_client.py  oauth_clients.py  templates.py
infrastructure/cache/: __init__.py  dual_cache.py  redis_client.py  url_cache.py
infrastructure/captcha/: __init__.py  hcaptcha.py  protocol.py
infrastructure/email/: __init__.py  protocol.py  zeptomail.py
infrastructure/webhook/: __init__.py  discord.py  protocol.py
k6/: README.md  run.sh  setup.js
k6/lib/: config.js  data.js  helpers.js
k6/scenarios/: api-load.js  api-smoke.js  auth-smoke.js  legacy-load.js  legacy-smoke.js  mixed-realistic.js  redirect-load.js  redirect-smoke.js  redirect-soak.js  redirect-spike.js  redirect-stress.js
middleware/: __init__.py  error_handler.py  logging.py  openapi.py  rate_limiter.py  security.py  timeout.py
misc/: humans.txt  robots.txt  security.txt  sitemap.xml
repositories/: api_key_repository.py  app_grant_repository.py  base.py  blocked_url_repository.py  click_repository.py  indexes.py  token_repository.py  url_repository.py  user_repository.py
repositories/legacy/: __init__.py  emoji_url_repository.py  legacy_url_repository.py
routes/: auth_routes.py  cookie_helpers.py  dashboard_routes.py  health_routes.py  oauth_routes.py  redirect_routes.py  static_routes.py
routes/api_v1/: __init__.py  claim.py  exports.py  keys.py  management.py  shorten.py  stats.py  urls.py
routes/auth/: __init__.py  device.py  password.py  routes.py  verification.py
routes/legacy/: __init__.py  helpers.py  stats.py  url_shortener.py
schemas/: results.py
schemas/dto/: base.py
schemas/enums/: stats.py
schemas/models/: api_key.py  app.py  app_grant.py  base.py  click.py  token.py  url.py  user.py
services/: api_key_service.py  auth_service.py  cache.py  cache_updates.py  cache_url.py  click_service.py  contact_service.py  flask_cache.py  oauth_service.py  profile_picture_service.py  stats_service.py  token_factory.py  url_service.py
services/auth/: __init__.py  credentials.py  device.py  otp.py  password.py  verification.py
services/click/: __init__.py  handlers.py  protocol.py  service.py
services/export/: __init__.py  formatters.py  protocol.py  service.py
shared/: __init__.py  aggregation_strategies.py  app_registry.py  bot_detection.py  datetime_utils.py  generators.py  ip_utils.py  legacy_helpers.py  logging.py  time_bucket_utils.py  validators.py
static/css/: anychart-ui.min.css  api.css  auth-modal.css  auth.css  base.css  confetti.css  contact.css  contacts-modal.css  customNotification.css  dashboard.css  docs-index.css  docs.css  dropdown.css  error.css  header.css  index.css  landing-edit-modal.css  mobile-header.css  notifications.css  password.css  preview.css  prism-duotone-dark.css  report.css  result.css  self-promo.css  stats-error.css  stats-view.css  stats.css  synthwave-84.css  v2-announcement.css
static/js/: alias-checker.js  auth-utils.js  auth.js  confetti.js  contacts-popup.js  customNotification.js  dashboard.js  dropdown.js  field-error.js  header.js  index-qrcode.js  index-recent-links.js  index-script.js  index-validate.js  landing-edit-modal.js  modal-tabs.js  notifications.js  result-script.js  self-promo.js  sheet-handle.js  stats-script.js  stats-view-script.js  url-manager.js  v2-announcement.js  verification-check.js
templates/: api.html  base.html  contact.html  dashboard.html  dashboard_keys.html  device_callback.html  device_consent.html  device_error.html  error.html  index.html  password.html  preview.html  report.html  result.html  scalar_docs.html  stats.html  stats_error.html  stats_view.html  verify.html
templates/dashboard/: apps.html  base.html  billing.html  keys.html  links.html  settings.html  statistics.html
templates/docs/: base.html  contributing.html  index.html  privacy-policy.html  self-hosting.html  terms-of-service.html
templates/emails/: base.html  password_reset.html  verification.html  welcome.html
templates/legal/: base.html  (+2 more)
tests/: conftest.py  shorten.py  stats.py  test_blocked_urls.py  test_contact_report.py  test_export_data.py  test_hcaptcha.py  test_password.py  test_ratelimiter.py  test_redirection.py  test_stats.py  test_url_shortener.py  test_urls.py  test_utils.py
utils/: aggregation_strategies.py  analytics_utils.py  auth_utils.py  contact_utils.py  email_service.py  export_utils.py  general.py  geoip.py  log_context.py  logger.py  logging_config.py  mongo_utils.py  oauth_providers.py  oauth_utils.py  password_utils.py  pipeline_utils.py  query_builder.py  stats_utils.py  time_bucket_utils.py  url_utils.py  validators.py  verification_utils.py
workers/: async_mongo.py  stats_handler.py  stats_publisher.py  stats_worker.py
(+150 files in other folders)
