[project]
name = "spoo-me"
version = "1.0.0"
description = "Open-Source URL Shortener Written in Flask"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.5",
    "crawlerdetect>=0.3.0",
    "dicttoxml>=1.7.16",
    "emoji>=2.14.1",
    "fastapi>=0.115.0",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.0",
    "flask-limiter[mongodb]>=3.11.0",
    "geoip2>=5.1.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "pycountry>=24.6.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pyjwt[crypto]>=2.10.1",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "regex>=2026.1.15",
    "requests>=2.32.3",
    "sentry-sdk[flask]>=2.44.0",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "tldextract>=5.3.0",
    "ua-parser[regex]>=1.0.1",
    "uvicorn[standard]>=0.34.0",
    "validators>=0.35.0",
    "walrus>=0.9.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anyio[trio]>=4.0.0",
    "mongomock>=4.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
    "requests-mock>=1.12.1",
    "ruff>=0.11.11",
    "uv>=0.9.6",
]
